--- a/plugins/archetypes/getter-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/plugins/archetypes/getter-archetype/src/main/resources/archetype-resources/pom.xml
@@ -14,6 +14,7 @@
 			<groupId>fr.simple.ged.connector</groupId>
 			<artifactId>ged-connector</artifactId>
 			<version>1.5.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
