--- a/ged-update/src/main/resources/properties/updater_constants.properties
+++ b/ged-update/src/main/resources/properties/updater_constants.properties
@@ -2,6 +2,6 @@
 # Update informations
 #
 
-GED_CORE_UPDATE_DESCRIPTOR_PATH=http://www.xaviermichel.info/data/ged/last_version.xml
+GED_CORE_UPDATE_DESCRIPTOR_PATH=https://raw.github.com/xaviermichel/simple-ged/master/webservice/last_version.xml
 
-UPDATER_UPDATE_DESCRIPTOR_PATH=http://www.xaviermichel.info/data/ged/updater_last_version.xml
+UPDATER_UPDATE_DESCRIPTOR_PATH=https://raw.github.com/xaviermichel/simple-ged/master/webservice/updater_last_version.xml
