--- a/ged-webapp/pom.xml
+++ b/ged-webapp/pom.xml
@@ -24,8 +24,10 @@
 	
 		<org.springframework.data.spring-data-rest-webmvc.version>2.0.0.M1</org.springframework.data.spring-data-rest-webmvc.version>
 		<org.springframework.boot.version>0.5.0.M6</org.springframework.boot.version>
-	
+
 		<com.fasterxml.jackson.core.version>2.3.0</com.fasterxml.jackson.core.version>
+
+        <org.thymeleaf.version>2.0.20</org.thymeleaf.version>
 	</properties>
 	
 	
@@ -142,7 +144,16 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-       
+
+
+        <!-- thymeleaf -->
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring3</artifactId>
+            <version>${org.thymeleaf.version}</version>
+        </dependency>
+
 
 		<!-- Elastic search -->
 
