--- a/ged-webapp/src/main/resources/elasticsearch.yml
+++ b/ged-webapp/src/main/resources/elasticsearch.yml
@@ -15,7 +15,7 @@
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
 #
- node.name: "Simple Ged"
+# node.name: "Simple Ged"
 
 
 #################################### Paths ####################################
