Refactor elastic tests

--- a/ged-webapp/src/main/resources/elasticsearch_configuration.properties
+++ b/ged-webapp/src/main/resources/elasticsearch_configuration.properties
@@ -3,4 +3,5 @@
 ged.embedded-storage=true
 
 # if the previous value was false, please let me know where I have to look for ES
-elasticsearch.cluster-nodes=localhost:9300,someip:9300
+#elasticsearch.cluster-nodes=localhost:9300,someip:9300
+elasticsearch.cluster-nodes=127.0.0.1:9300
